Refactor layout to grid layout

--- a/app/src/main/res/layout/item_final.xml
+++ b/app/src/main/res/layout/item_final.xml
@@ -5,6 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".11" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".22" />
+
     <TextView
         android:id="@+id/tvPlayerId"
         style="@style/Text"
@@ -12,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:text="P01"
+        app:layout_constraintEnd_toStartOf="@+id/guideline1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,7 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:text="Mr.A"
-        app:layout_constraintStart_toEndOf="@+id/tvPlayerId"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintStart_toEndOf="@+id/guideline1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -32,7 +48,7 @@
         android:layout_margin="4dp"
         android:overScrollMode="never"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvName"
+        app:layout_constraintStart_toEndOf="@+id/guideline2"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_sub_final" />
 
@@ -43,6 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:text="รวม 2 วัน"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tvSubTotalScore" />
 
@@ -53,6 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:text="รวมคะแนน 54"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
