--- a/app/src/main/res/layout/item_branch_final.xml
+++ b/app/src/main/res/layout/item_branch_final.xml
@@ -1,84 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:columnCount="7"
+    android:rowCount="1">
 
     <TextView
         android:id="@+id/tvDate"
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
         android:layout_margin="4dp"
-        android:text="1/1/64"
-        app:layout_constraintEnd_toStartOf="@+id/tvTime"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center"
+        android:text="1/1/64" />
 
     <TextView
         android:id="@+id/tvTime"
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
         android:layout_margin="4dp"
-        android:text="8:00"
-        app:layout_constraintEnd_toStartOf="@+id/tvItemA"
-        app:layout_constraintStart_toEndOf="@+id/tvDate"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center"
+        android:text="8:00" />
 
     <TextView
         android:id="@+id/tvItemA"
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
         android:layout_margin="4dp"
-        android:text="5"
-        app:layout_constraintEnd_toStartOf="@+id/tvItemB"
-        app:layout_constraintStart_toEndOf="@+id/tvTime"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center"
+        android:text="5" />
 
     <TextView
         android:id="@+id/tvItemB"
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
         android:layout_margin="4dp"
-        android:text="4"
-        app:layout_constraintEnd_toStartOf="@+id/tvItemC"
-        app:layout_constraintStart_toEndOf="@+id/tvItemA"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center"
+        android:text="4" />
 
     <TextView
         android:id="@+id/tvItemC"
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
         android:layout_margin="4dp"
-        android:text="0"
-        app:layout_constraintEnd_toStartOf="@+id/tvItemD"
-        app:layout_constraintStart_toEndOf="@+id/tvItemB"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center"
+        android:text="0" />
 
     <TextView
         android:id="@+id/tvItemD"
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
         android:layout_margin="4dp"
-        android:text="12"
-        app:layout_constraintEnd_toStartOf="@+id/tvTotalScore"
-        app:layout_constraintStart_toEndOf="@+id/tvItemC"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center"
+        android:text="12" />
 
     <TextView
         android:id="@+id/tvTotalScore"
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
         android:layout_margin="4dp"
-        android:text="21"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvItemD"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center"
+        android:text="21" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</GridLayout>
