--- a/app/src/main/res/layout/item_result_footer.xml
+++ b/app/src/main/res/layout/item_result_footer.xml
@@ -9,6 +9,7 @@
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/tvGrandTotalScore"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -18,6 +19,7 @@
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvGrandTotalPeople"
         app:layout_constraintTop_toTopOf="parent" />
