--- a/app/src/main/res/layout/item_sub_final.xml
+++ b/app/src/main/res/layout/item_sub_final.xml
@@ -33,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:text="รวมคะแนน 24"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
