--- a/app/src/main/res/layout/item_final_column_header.xml
+++ b/app/src/main/res/layout/item_final_column_header.xml
@@ -8,90 +8,81 @@
     <TextView
         android:id="@+id/tvPlayerId"
         style="@style/Text"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:gravity="center"
         android:text="รหัสผู้เล่น"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvName"
         style="@style/Text"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:gravity="center"
         android:text="ชื่อผู้เล่น"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvDate"
         style="@style/Text"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:gravity="center"
         android:text="วันที่"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvTime"
         style="@style/Text"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:gravity="center"
         android:text="เวลา"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvItemA"
         style="@style/Text"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:gravity="center"
         android:text="ไอเทม A"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvItemB"
         style="@style/Text"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:gravity="center"
         android:text="ไอเทม B"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvItemC"
         style="@style/Text"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:gravity="center"
         android:text="ไอเทม C"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvItemD"
         style="@style/Text"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:gravity="center"
         android:text="ไอเทม D"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvTotalScore"
         style="@style/Text"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:gravity="center"
         android:text="รวมคะแนน"
         android:textStyle="bold" />
 
