--- a/app/src/main/res/layout/item_item_collection_mode.xml
+++ b/app/src/main/res/layout/item_item_collection_mode.xml
@@ -9,6 +9,7 @@
         style="@style/Text"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="Mode"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
